# beatschainextension

./: .gitignore  2025-01-15-21-00-PHASE-2-IMPLEMENTATION-COMPLETE.md  2025-01-16-16-30-ADMIN-DASHBOARD-ERROR-FIX-COMPLETE.md  2025-01-16-16-45-COMPREHENSIVE-ERROR-HANDLING-FIX-COMPLETE.md  2025-01-16-17-00-FINAL-COMPREHENSIVE-ERROR-FIX-COMPLETE.md  2025-01-16-17-45-IPFS-SPONSOR-INTEGRATION-VERIFICATION.md  2025-01-16-ADMIN-DASHBOARD-ERROR-FIX-COMPLETE.md  2025-01-16-ARTIST-INVITATION-VERIFICATION-COMPLETE.md  2025-10-16-0940-PHASE-2-COMPREHENSIVE-ANALYSIS.md  2025-10-17-1145-COMPREHENSIVE-EXTENSION-CONTEXT.md  2025-10-17-1155-ENHANCEMENT-STRATEGY-DISCUSSION.md  2025-10-17-1205-SAMRO-PDF-FIELD-MAPPING-ANALYSIS.md  2025-10-17-1215-PHASE-AB-IMPLEMENTATION-COMPLETE.md  2025-10-21-1452-SYNTAX-ERRORS-FIXED-COMPLETE.md  2025-10-21-16-33-FREE-MINTING-IMPLEMENTATION-COMPLETE.md  2025-10-21-17:10-IMPLEMENTATION-CONTEXT.md  2025-10-21-17:10-MINTING-SPONSORED-CONTENT-PLAN.md  2025-10-21-NEW-CHAT-COMPREHENSIVE-CONTEXT.md  2025-10-21-SOLANA-FOCUSED-RESTART-PLAN.md  2025-10-21-SOLANA-ONLY-MIGRATION-PLAN.md  2025-10-22-09-58-ISRC-METADATA-FIX.md  2025-10-22-14-50-phase3-admin-wallet-production-security.md  2025-10-22-15-03-CRITICAL_FIXES_COMPLETED.md  2025-10-22-21-05-RECENT-IMPLEMENTATIONS-FIX-SUMMARY.md  2025-10-23-09-29-SECURITY-PERFORMANCE-FIXES-ADMIN-DASHBOARD.md  2025-10-24-11-45-ISRC-SYNTAX-ERROR-FIX-COMPLETE.md  2025-10-25-02-54-EXTENSION-ZIP-CREATED.md  2025-10-25-04-31-admin-dashboard-sponsor-management-fixes.md  2025-10-25-04-31-campaign-management-enhancement-summary.md  (+43 more)
(+337 files in other folders)
