[package]
name = "beatschain-solana"
version = "0.1.0"
description = "BeatsChain Solana NFT Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "beatschain_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
mpl-token-metadata = "4.1.2"